# Non_Rep_Reg

./: .gitignore  CMakeLists.txt  PROGRESS_REPORT.md  README.md  README_campaign.md  nr_method.md
config/: lio.yaml  lio_cern.yaml  lio_tier_avia.yaml  lio_tier_horizen.yaml  lio_v2.yaml  lio_v2_tier_avia_tuned_full.yaml  non_rep_lidar.yaml
docs/: index.html
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
launch/: lio.launch.py  lio_tier.launch.py  lio_tier_horizen.launch.py  lio_v2.launch.py  lio_variant.launch.py
log/: latest_build
scripts/: Pctools.py  _run_indoor1_debug.out  _run_indoor1_debug.py  _v3_offline_test.py  bench_run.sh  bench_run_all.sh  bench_web.py  campaign_web.py  csv_to_tum.py  debug_plot.py  degeneracy.py  imu_rescale.py  lio_base.py  lio_degen_reuse.py  lio_fused_gated.py  lio_fused_gated_ndt.py  lio_fused_gated_p2p_gicp_ndt.py  lio_gen_lio.py  lio_gen_lio_intensity.py  lio_gen_lio_tier1.py  lio_gen_lio_tier2.py  lio_gen_lio_tier3.py  lio_gen_lio_tier4.py  lio_gyro_gicp.py  lio_gyro_gicp_degen.py  lio_gyro_gicp_p2p.py  lio_gyro_slowrot.py  lio_nonrep_fused_degen.py  lio_nonrep_gicp.py  lio_nonrep_gicp_p2p.py  lio_nonrep_gicp_p2p_degen.py  lio_nonrep_ndt.py  lio_nrlio.py  lio_nrlio_op_den.py  lio_nrlio_optA.py  lio_nrlio_optB.py  lio_nrlio_optimized.py  lio_nrlio_plus.py  lio_p2p.py  lio_pgo.py  (+26 more)
tum/: debug_indoor1_avia.csv  debug_v2_accel_tight.csv  debug_v2_anchor.csv  debug_v2_final.csv  debug_v2_gate.csv  debug_v2_gyrofix.csv  debug_v2_gyroonly.csv  debug_v2_indoor1_avia.csv  debug_v2_indoor2_avia.csv  debug_v2_indoor3_avia.csv  debug_v2_p2p.csv  debug_v2_p2pb.csv  debug_v2_queuefix.csv  debug_v2_superlio_full.csv  debug_v2_superlio_smoke.csv  debug_v2_tuned.csv  lidar_odom.tum  lio_odom.ann.csv  lio_odom.proc.csv  lio_odom.tum  lio_v2_accel_tight.tum  lio_v2_anchor.tum  lio_v2_final.tum  lio_v2_gate.tum  (+12 more)
(+157 files in other folders)
